fix for menu display glitch; modal size increased; flexbox item self-aligned on Work page

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header {
 
 /*MOBILE NAV*/
 #hamburger {
-  display: inline-block;
+  display: none;
   font-size: 25px;
   color: #6F838A;
   cursor: pointer;
@@ -322,7 +322,8 @@ nav a {
     margin-bottom: 15px; } }
 @media only screen and (min-width: 1024px) {
   .project-row {
-    margin-bottom: 0; } }
+    margin-bottom: 0; 
+    justify-content: initial; } }
 
 .highlight-box {
   background-color: #BDE2F7;
@@ -599,12 +600,12 @@ footer, .push {
   @media only screen and (min-width: 768px) {
     #overlay {
       width: 90%;
-      height: 60%;
-      max-height: 450px; } }
+      height: 75%;
+      max-height: 500px; } }
   @media only screen and (min-width: 1024px) {
     #overlay {
       width: 70%;
-      max-height: 500px; } }
+      max-height: 525px; } }
 
 #overlay .prev,
 #overlay .next {
@@ -655,7 +656,8 @@ footer, .push {
       top: 20%;
       width: 30%;
       left: 83%;
-      transform: translateX(-83%); } }
+      transform: translateX(-83%); } 
+  }
 
 #overlay p {
   display: none; }
@@ -673,7 +675,9 @@ footer, .push {
   @media only screen and (min-width: 1024px) {
     #overlay p {
       font-size: 1.1em;
-      top: 26%; } }
+      top: 26%;
+      width: 275px;
+      left: 53%; } }
 
 .project-thumbnail {
   width: 225px;
